Обновлены модели данных с учетом добавление базы данных.